[gd_scene load_steps=4 format=3 uid="uid://cghshp176xdq1"]

[ext_resource type="Texture2D" uid="uid://ckf3awdrcux34" path="res://ComPuzzle Assets/buttons/WALK/Walk_Button.png" id="1_h7slj"]
[ext_resource type="Script" uid="uid://bkko6chb7djmv" path="res://Scripts/buttonFunctionality.gd" id="2_7baod"]

[sub_resource type="LabelSettings" id="LabelSettings_0l3hy"]
font_size = 18
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Walk_Button" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1856.0
offset_bottom = -1016.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_h7slj")
stretch_mode = 0
script = ExtResource("2_7baod")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 62.0
offset_bottom = 64.0

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 45.0
offset_bottom = 23.0
text = "WALK"

[node name="up_button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_direction = 1
layout_mode = 0
offset_left = 42.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 6.0
scale = Vector2(5, 5)

[node name="down_button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_direction = 3
layout_mode = 0
offset_left = -2.0
offset_top = 63.0
offset_right = 2.0
offset_bottom = 68.0
rotation = 3.14159
scale = Vector2(5, 5)

[node name="delete_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 27.0
offset_right = 57.0
offset_bottom = 37.0

[node name="index_label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 40.0
offset_right = 26.0
offset_bottom = 66.0
text = "0"
label_settings = SubResource("LabelSettings_0l3hy")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="up_button" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="down_button" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="delete_button" to="." method="_on_delete_button_pressed"]
